--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo",
   "version": "0.1.0",
-  "homepage": "https://racingfoxs.github.io/Todo-Project/#",
+  "homepage": "https://racingfoxs.github.io/CURD-Project/#",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
